--- a/package.json
+++ b/package.json
@@ -1,22 +1,61 @@
 {
   "name": "treesift",
   "version": "1.0.0",
-  "description": "",
-  "license": "ISC",
-  "author": "",
+  "description": "A powerful JavaScript/TypeScript AST analysis library for React components and beyond",
+  "license": "MIT",
+  "author": "Preston Arnold",
   "type": "commonjs",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "files": [
+    "dist",
+    "README.md",
+    "LICENSE"
+  ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc",
+    "dev": "tsc -w",
+    "test": "jest",
+    "lint": "eslint src/**/*.ts",
+    "format": "prettier --write \"src/**/*.ts\"",
+    "prepare": "npm run build",
+    "prepublishOnly": "npm test && npm run lint"
   },
   "dependencies": {
     "@babel/parser": "^7.27.0",
-    "@babel/types": "^7.27.0"
+    "@babel/types": "^7.27.0",
+    "chalk": "^5.4.1"
   },
   "devDependencies": {
     "@babel/traverse": "^7.27.0",
     "@types/babel__traverse": "^7.20.7",
+    "@types/jest": "^29.5.12",
     "@types/node": "^22.14.1",
+    "@typescript-eslint/eslint-plugin": "^7.1.0",
+    "@typescript-eslint/parser": "^7.1.0",
+    "eslint": "^8.57.0",
+    "jest": "^29.7.0",
+    "prettier": "^3.2.5",
+    "ts-jest": "^29.1.2",
     "typescript": "^5.8.3"
-  }
+  },
+  "keywords": [
+    "ast",
+    "analysis",
+    "react",
+    "typescript",
+    "javascript",
+    "parser",
+    "components",
+    "documentation",
+    "static-analysis"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/prestons18/treesift.git"
+  },
+  "bugs": {
+    "url": "https://github.com/prestons18/treesift/issues"
+  },
+  "homepage": "https://github.com/prestons18/treesift#readme"
 }
