--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "scripts": {
     "build": "tsc",
     "dev": "tsc -w",
-    "test": "jest",
+    "test": "tsx src/test.ts",
     "lint": "eslint src/**/*.ts",
     "format": "prettier --write \"src/**/*.ts\"",
     "prepare": "npm run build",
@@ -34,6 +34,7 @@
     "@typescript-eslint/parser": "^8.30.0",
     "eslint": "^9.24.0",
     "prettier": "^3.2.5",
+    "tsx": "^4.19.3",
     "typescript": "^5.8.3"
   },
   "keywords": [
